--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 	{% include "page_head/page_head.html.twig" with {'page_name': 'Cart'} %}
-	<div class="main_content cart_content" data-cart="{{ cart_json }}">
+	<div class="main_content cart_content" data-cart="{{ cart_json }}" data-carriers="{{ carriers_json }}">
 		<div class="section">
 			<div class="container">
 				<div class="row">
@@ -38,20 +38,12 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="border p-3 p-md-4">
+						<div class="border p-3 p-md-4 carrier_form">
 							<div class="heading_s1 mb-3">
 								<h6>Choose your carrier</h6>
 							</div>
 							<form action="/cart/carrier" method="post">
-								<select name="carrierId" id="carrier" class="form-control">
-									{% for carrier in carriers %}
-										<option value="{{ carrier.id }}" {% if cart.data.carrier_id == carrier.id %} selected {% endif %}>
-											{{ carrier.name }}
-											({{ (carrier.price / 100) | format_currency("EUR") }})
-										</option>
-									{% endfor %}
-								</select>
-								<button class="btn btn-fill-out mt-1">Update Carrier</button>
+								<select name="carrierId" id="carrier" class="form-control"></select>
 							</form>
 						</div>
 					</div>
