--- a/templates/checkout/index.html.twig
+++ b/templates/checkout/index.html.twig
@@ -3,23 +3,19 @@
 {% block title %}Exprass Ecommerce | Checkout
 {% endblock %}
 
+{% block stylesheets %}
+	<script src="https://js.stripe.com/v3/"></script>
+{% endblock %}
+
 {% block body %}
 	{% include "page_head/page_head.html.twig" with {'page_name': 'Checkout'} %}
-	<div class="main_content">
+	<div class="main_content" data-cart="{{cart_json}}" data-public_key="{{public_key}}">
 		<div class="section">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6"></div>
 				</div>
-				<div
-					class="row">{# <div class="col-12">
-																																																																																																																																																																																																																																																																																																																		<div class="medium_divider"></div>
-																																																																																																																																																																																																																																																																																																																		<div class="divider center_icon">
-																																																																																																																																																																																																																																																																																																																			<i class="linearicons-credit-card"></i>
-																																																																																																																																																																																																																																																																																																																		</div>
-																																																																																																																																																																																																																																																																																																																		<div class="medium_divider"></div>
-																																																																																																																																																																																																																																																																																																																	</div> #}
-				</div>
+				<div class="row"></div>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="heading_s1">
@@ -100,12 +96,32 @@
 								</table>
 							</div>
 							<div class="payment_method d-none">
-								<a href="#" class="btn btn-fill-out btn-block">
+								<a href="#" class="btn btn-fill-out btn-block" data-bs-toggle="modal" data-bs-target="#exampleModal">
 									Pay now ({{ ((cart.data.subTotalTTC + cart.data.carrier_price) / 100) | format_currency('EUR') }})
 								</a>
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-body">
+					<form id="payment-form">
+						<div
+							id="payment-element"><!--Stripe.js injects the Payment Element-->
+						</div>
+						<button id="submit">
+							<div class="spinner hidden" id="spinner"></div>
+							<span id="button-text">Pay now</span>
+						</button>
+						<div id="payment-message" class="hidden"></div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -171,5 +187,95 @@ updateButton();
 });
 }
 });
+
+// Stripe component
+
+const main_content = document.querySelector(".main_content");
+const cart = JSON.parse(main_content ?. dataset ?. cart || "[]");
+const public_key = main_content ?. dataset ?. public_key || "";
+
+// This is your test publishable API key.
+const stripe = Stripe(public_key);
+
+// The items the customer wants to buy
+const items = cart.items;
+
+let elements;
+
+initialize();
+
+document.querySelector("#payment-form").addEventListener("submit", handleSubmit);
+
+let emailAddress = '';
+// Fetches a payment intent and captures the client secret
+async function initialize() {
+
+const {clientSecret} = await fetch("/api/stripe/payment-intent", {
+method: "POST",
+headers: {
+"Content-Type": "application/json"
+},
+body: JSON.stringify({})
+}).then((r) => r.json());
+
+elements = stripe.elements({clientSecret});
+
+const paymentElementOptions = {
+layout: "accordion"
+};
+
+const paymentElement = elements.create("payment", paymentElementOptions);
+paymentElement.mount("#payment-element");
+}
+
+async function handleSubmit(e) {
+e.preventDefault();
+setLoading(true);
+
+const {error} = await stripe.confirmPayment({
+elements,
+confirmParams: { // Make sure to change this to your payment completion page
+return_url: "http://localhost:4242/complete.html"
+}
+});
+
+// This point will only be reached if there is an immediate error when
+// confirming the payment. Otherwise, your customer will be redirected to
+// your `return_url`. For some payment methods like iDEAL, your customer will
+// be redirected to an intermediate site first to authorize the payment, then
+// redirected to the `return_url`.
+if (error.type === "card_error" || error.type === "validation_error") {
+showMessage(error.message);
+} else {
+showMessage("An unexpected error occurred.");
+} setLoading(false);
+}
+
+// ------- UI helpers -------
+
+function showMessage(messageText) {
+const messageContainer = document.querySelector("#payment-message");
+
+messageContainer.classList.remove("hidden");
+messageContainer.textContent = messageText;
+
+setTimeout(function () {
+messageContainer.classList.add("hidden");
+messageContainer.textContent = "";
+}, 4000);
+}
+
+// Show a spinner on payment submission
+function setLoading(isLoading) {
+if (isLoading) { // Disable the button and show a spinner
+document.querySelector("#submit").disabled = true;
+document.querySelector("#spinner").classList.remove("hidden");
+document.querySelector("#button-text").classList.add("hidden");
+} else {
+document.querySelector("#submit").disabled = false;
+document.querySelector("#spinner").classList.add("hidden");
+document.querySelector("#button-text").classList.remove("hidden");
+}
+}
 	</script>
 {% endblock %}
